# auschooltermdates

./: .gitignore  README.md  main.py  pyproject.toml  term_dates.json
.github/workflows/: main.yaml
TermData/: ACTTermDates.py  NSWTermDates.py  NTTermDates.py  QLDTermDates.py  SATermDates.py  TASTermDates.py  VICTermDates.py  WATermDates.py  __init__.py
